fix issue with legend text alignment. create python script to simulate nanopore depositing reads.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -165,6 +165,10 @@ polyline{
     bottom: 0px;
 }
 
+.shadow {
+    -webkit-filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.5) );
+    filter: drop-shadow( 0px 3px 3px rgba(0,0,0,.25) );
+}
 
 
 /*=========================================*/
